fixed ad error on safari

--- a/httpdocs/CSS/WebEnglishTeacherCSS.css
+++ b/httpdocs/CSS/WebEnglishTeacherCSS.css
@@ -126,7 +126,7 @@ select.mobile-selector {
     /*width: 300px;*/
     width: 100%;
     height: auto;
-    url(../cgimages/sidebar2_green.gif) repeat-y #86b242
+    background: url(../cgimages/sidebar2_green.gif) repeat-y #86b242;
     padding: 0;
     display: block;
     margin: 0 auto;
@@ -137,6 +137,10 @@ select.mobile-selector {
     width:100%;
 }
 
+.webenglish #rightcontent img {
+    height: auto;
+    width: 100%;
+}
 div.sidenewsletter {
     /*float: left;*/
     width: 175px;
@@ -164,7 +168,7 @@ div.sidenewsletter-in {
 
 div.sidenewsletter-in img {
     width: 100%;
-    height: 100%;
+    height: 35px;
 }
 
 div.sidenewslettertext-in {
@@ -323,7 +327,6 @@ div.siteteacher {
 }
 
 div.literacysite {
-    /*width: 100%;*/
     display: block;
     background: url(../cgimages/sidebar2_green.gif) repeat-y #86b242;
 }
@@ -635,6 +638,10 @@ ul.mobile-nav li > a {
         height: 125px;
         background: url(../cgimages/sidebar1_green.gif) repeat-x;
         padding: 0;
+    }
+
+    div.sidenewsletter-in img {
+        height: auto;
     }
 
     div.sidenewslettertext {
